cc: Temporarily avoid gpu raster drawing in HUD.

Drawing HUD with gpu raster is causing some frame drops and
stuttering. Fix that before re-eanbling.

BUG=751732